install: bcrypt and node-gyp dependency

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.12.3",
+    "node-gyp": "^8.0.0",
     "validator": "^13.5.2"
   }
 }
