--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "celebrate": "^14.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-winston": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
