--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
   "parserOptions": {
     "ecmaVersion": 12
   },
-  "rules": { "no-underscore-dangle": ["error", { "allow": ["_id"] }] }
+  "rules": {
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+  }
 }
