--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,6 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
   }
 }
