--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^5.2.6",
     "express-slow-down": "^1.4.0",
     "express-winston": "^4.1.0",
+    "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
     "validator": "^13.6.0",
