--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
-// {
-//   "compilerOptions": {
-//     "noEmit": false,
-//     "outDir": "this_folder_should_never_appear"
-//   }
-// }
+{
+  "compilerOptions": {
+    "noEmit": false,
+    "outDir": "this_folder_should_never_appear"
+  }
+}
