--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
+    "node-gyp": "^8.0.0",
     "validator": "^13.6.0",
     "winston": "^3.3.3"
   }
